--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "devDependencies": {
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.4.1",
+    "@pinia/nuxt": "^0.4.7",
+    "@types/node": "^18.14.0",
     "autoprefixer": "^10.4.13",
-    "nuxt": "^3.2.3",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "nuxt": "^3.2.3"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.7"
+    "qs": "^6.11.0"
   }
 }
