--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "nuxt": "^3.2.3"
   },
   "dependencies": {
+    "@vueuse/core": "^3.0.2",
+    "axios": "^1.3.4",
     "ipx": "^1.0.0-2",
     "qs": "^6.11.0"
   }
