--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@pinia/nuxt": "^0.4.7",
     "@types/node": "^18.14.0",
     "autoprefixer": "^10.4.13",
-    "nuxt": "^3.2.3"
+    "nuxt": "^3.2.3",
+    "nuxt-icon": "^0.3.3"
   },
   "dependencies": {
     "@vueuse/core": "^3.0.2",
