--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@nuxt/image-edge": "^1.0.0-27968280.9739e4d",
     "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@nuxtjs/tailwindcss": "^6.4.1",
     "@pinia/nuxt": "^0.4.7",
     "@types/node": "^18.14.0",
@@ -21,6 +22,7 @@
     "@vueuse/core": "^3.0.2",
     "axios": "^1.3.4",
     "ipx": "^1.0.0-2",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "vue3-carousel": "^0.3.1"
   }
 }
