--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.4",
     "ipx": "^1.0.0-2",
     "qs": "^6.11.0",
-    "vue3-carousel": "^0.3.1"
+    "vue3-carousel": "^0.3.1",
+    "vuedraggable": "^4.1.0"
   }
 }
