--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt-icon": "^0.3.3"
   },
   "dependencies": {
+    "@vimeo/player": "^2.19.0",
     "@vueuse/core": "^3.0.2",
     "axios": "^1.3.4",
     "ipx": "^1.0.0-2",
