--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/i18n": "^8.0.0-beta.11",
     "@nuxtjs/tailwindcss": "^6.4.1",
-    "@pinia/nuxt": "^0.4.7",
+    "@pinia/nuxt": "^0.4.11",
     "@types/node": "^18.14.0",
     "autoprefixer": "^10.4.13",
     "nuxt": "^3.2.3",
@@ -23,6 +23,7 @@
     "@vueuse/core": "^3.0.2",
     "axios": "^1.3.4",
     "ipx": "^1.0.0-2",
+    "pinia": "^2.1.4",
     "qs": "^6.11.0",
     "vue3-carousel": "^0.3.1",
     "vuedraggable": "^4.1.0"
