--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ipx": "^1.0.0-2",
     "qs": "^6.11.0",
     "vue3-carousel": "^0.3.1",
+    "vue3-youtube": "^0.1.9",
     "vuedraggable": "^4.1.0"
   }
 }
