--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt-icon": "^0.3.3"
   },
   "dependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
     "@vimeo/player": "^2.19.0",
     "@vueuse/core": "^3.0.2",
     "ipx": "^1.0.0-2",
