--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build --if-present
-    - run: npm run preview
+    - run: npm test .output/server/index.mjs
 # Get repo name
     - name: Get repo name
       shell: bash
