--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '16.x'
-        cache: 'npm'
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
+    #- name: Use Node.js
+    #  uses: actions/setup-node@v3
+    #  with:
+    #    node-version: '16.x'
+    #    cache: 'npm'
+    #- run: npm install
+    #- run: npm run build --if-present
+    #- run: npm test
 # Get repo name
     - name: Get repo name
       shell: bash
