--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.0.0",
     "@nuxt/image-edge": "^1.0.0-27968280.9739e4d",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/i18n": "^8.0.0-beta.11",
@@ -19,7 +20,7 @@
     "nuxt-icon": "^0.3.3"
   },
   "dependencies": {
-    "@pinia-plugin-persistedstate/nuxt": "^1.1.1",
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
     "@vimeo/player": "^2.19.0",
     "@vueuse/core": "^3.0.2",
     "ipx": "^1.0.0-2",
